# ai-native-python

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CLAUDE.md  CONTRIBUTING.md  FAQ.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  Taskfile.yml  cookiecutter.json  pyproject.toml  renovate.json
.cursor/rules/: python-template.mdc
.github/: .grant.yml  CODEOWNERS  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/actions/bootstrap/: action.yml
.github/etc/: dictionary.txt
.github/linters/: cspell.config.js  lychee.toml
.github/workflows/: ci.yml  release.yml  security.yml  update.yml  validate_pr_titles.yml
ai_native_python/: __init__.py
docs/: ai-ide-support.md  ci-cd.md  configuration.md  faq.md  hooks.md  index.md  optional-setup.md  roadmap.md  testing.md
hooks/: post_gen_project.py  pre_gen_project.py
scripts/: scan_workflow_logs.sh
tests/: test_cookiecutter.py
{{cookiecutter.project_name|replace(" ", "")}}/: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FAQ.md  LICENSE  README.md  SECURITY.md  Taskfile.yml  pyproject.toml  renovate.json  service_definition.yaml
{{cookiecutter.project_name|replace(" ", "")}}/.cursor/rules/: project.mdc  testing.mdc
{{cookiecutter.project_name|replace(" ", "")}}/.devcontainer/: README.md  devcontainer.json  docker-compose.yml
{{cookiecutter.project_name|replace(" ", "")}}/.github/: CODEOWNERS  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
{{cookiecutter.project_name|replace(" ", "")}}/.github/actions/bootstrap/: action.yml
{{cookiecutter.project_name|replace(" ", "")}}/.github/etc/: dictionary.txt
{{cookiecutter.project_name|replace(" ", "")}}/.github/linters/: lychee.toml
{{cookiecutter.project_name|replace(" ", "")}}/.github/workflows/: ci.yml  commit.yml  release.yml  security.yml  update.yml  validate_pr_titles.yml
{{cookiecutter.project_name|replace(" ", "")}}/scripts/: get_epoch.sh  get_os.sh  get_platform.sh  get_rfc3339_timestamp.py  scan_image.py  scan_workflow_logs.sh  validate_service_definition.py
{{cookiecutter.project_name|replace(" ", "")}}/src/: main.py
{{cookiecutter.project_name|replace(" ", "")}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_name|replace(" ", "")}}/tests/: test_config.py  test_integration.py  test_main.py  test_package.py
{{cookiecutter.project_name|replace(" ", "")}}/{{cookiecutter.project_slug}}/: __init__.py  config.py  constants.py
